<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical"
    >    

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:animateLayoutChanges="true"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_track"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            
            <Spinner
		        android:id="@+id/spinnerUserHikeNames"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/textView1"
		        android:layout_marginTop="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/export_file_name"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextFileName"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_marginTop="5dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/export_desc"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/editTextExpDesc"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10" />

		    <TextView
		        android:id="@+id/textViewPath"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/export_path"
		        android:textAppearance="?android:attr/textAppearanceSmall"
		        android:visibility="gone" />

		    <EditText
		        android:id="@+id/editTextPath"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:ems="10"
		        android:visibility="gone" />
		
		    <Button
		        android:id="@+id/buttonExport"
		        android:layout_marginTop="10dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:text="@string/export" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
